--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
   </div>
   <footer role="contentinfo"><p>
-  Copyright &copy; 2012 - Your Name -
+  Copyright &copy; 2012 - Ashley Fossile -
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
 
