--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
   
 <ul class="main-navigation">
   <li><a href="/">Blog</a></li>
-  <li><a href="/blog/archives">Archives</a></li>
-  <li><a href="/aboutme">About Me</a></li>
+  <li><a href="/blog/archives/index.html">Archives</a></li>
+  <li><a href="/aboutme/index.html">About Me</a></li>
 </ul>
 
 </nav>
