--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <head>
   <meta charset="utf-8">
   <title>Fossilized Mango</title>
-  <meta name="author" content="Your Name">
+  <meta name="author" content="Ashley Fossile">
 
   
-  <meta name="description" content="Quick Introduction My name is Ashley Fossile and I just started using static site generator to work with blogs. It took about 4 hours to finally get &hellip;">
+  <meta name="description" content="Dominic and Ashley Fossile's Blog">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -23,7 +23,7 @@
   <script src="/javascripts/modernizr-2.0.js"></script>
   <script src="/javascripts/ender.js"></script>
   <script src="/javascripts/octopress.js" type="text/javascript"></script>
-  <link href="/atom.xml" rel="alternate" title="My Octopress Blog" type="application/atom+xml">
+  <link href="/atom.xml" rel="alternate" title="Fossile Adventures" type="application/atom+xml">
   <!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
 <link href="http://fonts.googleapis.com/css?family=PT+Serif:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic" rel="stylesheet" type="text/css">
@@ -34,7 +34,7 @@
 
 <body   >
   <header role="banner"><hgroup>
-  <h1><a href="/">Fossilized Mango</a></h1>
+  <h1><a href="/">Fossile Adventures</a></h1>
   
     <h2></h2>
   
@@ -56,7 +56,7 @@
 <ul class="main-navigation">
   <li><a href="/">Blog</a></li>
   <li><a href="/blog/archives/index.html">Archives</a></li>
-  <li><a href="/aboutme/index.html">About Me</a></li>
+  <li><a href="/aboutme/index.html">About US</a></li>
 </ul>
 
 </nav>
